<resources>
    <string name="app_name">ShortBio da Noobs Corp.</string>
    <string name="sobre">Sobre  a Noobs</string>
    <string name="formacao">Portfólio</string>
    <string name="experiencia">Experiências</string>
    <string name="objetivo">Objetivo da Empresa</string>
    <string name="nome">Grupo Noobs Corporation</string>
    <string name="idade">Desde 1999 atuando em mais de 17 paises</string>
    <string name="formacao_descricao">Com um vasto portfólio desenvolvido com ajuda de colaboradores extremamente bem formados e pós graduados</string>
    <string name="primeira_experiencia">Mais de 20 atuando com os mais diversos clientes</string>
    <string name="segunda_experiencia">Desenvolvemos as mais diversas soluções impossíveis e inimagináveis</string>
    <string name="objetivo_descricao">Desenvolver as melhores soluções</string>
</resources>