<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/purple_500"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sobre_button"
        android:layout_width="198dp"
        android:layout_height="55dp"
        android:text="@string/sobre"
        app:layout_constraintBottom_toTopOf="@id/formacao_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/formacao_button"
        android:layout_width="195dp"
        android:layout_height="69dp"
        android:text="@string/formacao"
        app:layout_constraintBottom_toTopOf="@id/experiencia_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sobre_button" />

    <Button
        android:id="@+id/experiencia_button"
        android:layout_width="202dp"
        android:layout_height="68dp"
        android:text="@string/experiencia"
        app:layout_constraintBottom_toTopOf="@id/objetivo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formacao_button" />

    <Button
        android:id="@+id/objetivo_button"
        android:layout_width="225dp"
        android:layout_height="66dp"
        android:text="@string/objetivo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/experiencia_button" />
</androidx.constraintlayout.widget.ConstraintLayout>